@@ -11,7 +11,8 @@
  *
  * This program and the accompanying materials are made available under the
  * terms of the Apache License, Version 2.0 which is available at
- * https://www.apache.org/licenses/LICENSE-2.0. *
+ * https://www.apache.org/licenses/LICENSE-2.0.
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
  * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
@@ -22,62 +23,136 @@
  ********************************************************************************/
 package org.eclipse.tractusx.irs.aaswrapper.job.delegate;
 
-import static org.eclipse.tractusx.irs.util.TestMother.jobParameter;
-import static org.eclipse.tractusx.irs.util.TestMother.relationship;
-import static org.eclipse.tractusx.irs.util.TestMother.shellDescriptor;
-import static org.eclipse.tractusx.irs.util.TestMother.submodelDescriptor;
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.eclipse.tractusx.irs.util.TestMother.jobParameter;
+import static org.eclipse.tractusx.irs.util.TestMother.jobParameterUpward;
+import static org.eclipse.tractusx.irs.util.TestMother.shellDescriptor;
+import static org.eclipse.tractusx.irs.util.TestMother.submodelDescriptorWithDspEndpoint;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
-import java.util.Collections;
+import java.io.IOException;
+import java.net.URISyntaxException;
+import java.nio.file.Files;
+import java.nio.file.Paths;
 import java.util.List;
+import java.util.Objects;
 
 import org.eclipse.tractusx.irs.aaswrapper.job.AASTransferProcess;
 import org.eclipse.tractusx.irs.aaswrapper.job.ItemContainer;
+import org.eclipse.tractusx.irs.component.PartChainIdentificationKey;
 import org.eclipse.tractusx.irs.component.enums.ProcessStep;
 import org.eclipse.tractusx.irs.edc.client.EdcSubmodelFacade;
 import org.eclipse.tractusx.irs.edc.client.exceptions.EdcClientException;
+import org.eclipse.tractusx.irs.registryclient.discovery.ConnectorEndpointsService;
+import org.eclipse.tractusx.irs.util.JsonUtil;
 import org.junit.jupiter.api.Test;
 
 class RelationshipDelegateTest {
 
     final EdcSubmodelFacade submodelFacade = mock(EdcSubmodelFacade.class);
-    final RelationshipDelegate relationshipDelegate = new RelationshipDelegate(null, submodelFacade);
+    final ConnectorEndpointsService connectorEndpointsService = mock(ConnectorEndpointsService.class);
+    final JsonUtil jsonUtil = new JsonUtil();
+    final RelationshipDelegate relationshipDelegate = new RelationshipDelegate(null, submodelFacade,
+            connectorEndpointsService, jsonUtil);
 
-    final String assemblyPartRelationshipAspectName = "urn:bamm:com.catenax.assembly_part_relationship:1.0.0#AssemblyPartRelationship";
+    final String singleLevelBomAsBuiltAspectName = "urn:bamm:io.catenax.single_level_bom_as_built:2.0.0#SingleLevelBomAsBuilt";
+    final String singleLevelUsageAsBuiltAspectName = "urn:bamm:io.catenax.single_level_usage_as_built:2.0.0#SingleLevelUsageAsBuilt";
+
+    private static PartChainIdentificationKey createKey() {
+        return PartChainIdentificationKey.builder().globalAssetId("itemId").bpn("bpn123").build();
+    }
 
     @Test
-    void shouldFillItemContainerWithRelationshipAndAddChildIdsToProcess() throws EdcClientException {
+    void shouldFillItemContainerWithRelationshipAndAddChildIdsToProcess()
+            throws EdcClientException, URISyntaxException, IOException {
         // given
-        when(submodelFacade.getRelationships(anyString(), any())).thenReturn(Collections.singletonList(relationship()));
-        final ItemContainer.ItemContainerBuilder itemContainerWithShell = ItemContainer.builder().shell(shellDescriptor(
-                List.of(submodelDescriptor(assemblyPartRelationshipAspectName, "address"))));
+        when(submodelFacade.getSubmodelRawPayload(anyString(), anyString(), anyString())).thenReturn(Files.readString(
+                Paths.get(Objects.requireNonNull(getClass().getResource("/singleLevelBomAsBuilt.json")).toURI())));
+        when(connectorEndpointsService.fetchConnectorEndpoints(any())).thenReturn(List.of("http://localhost"));
+
+        final ItemContainer.ItemContainerBuilder itemContainerWithShell = ItemContainer.builder()
+                                                                                       .shell(shellDescriptor(
+                                                                                               List.of(submodelDescriptorWithDspEndpoint(
+                                                                                                       singleLevelBomAsBuiltAspectName,
+                                                                                                       "address"))));
         final AASTransferProcess aasTransferProcess = new AASTransferProcess();
 
         // when
         final ItemContainer result = relationshipDelegate.process(itemContainerWithShell, jobParameter(),
-                aasTransferProcess, "itemId");
+                aasTransferProcess, createKey());
 
         // then
         assertThat(result).isNotNull();
         assertThat(result.getRelationships()).isNotEmpty();
         assertThat(aasTransferProcess.getIdsToProcess()).isNotEmpty();
+        assertThat(aasTransferProcess.getIdsToProcess().get(0).getGlobalAssetId()).isNotEmpty();
+    }
+
+    @Test
+    void shouldFillItemContainerWithUpwardRelationshipAndAddChildIdsToProcess()
+            throws EdcClientException, URISyntaxException, IOException {
+        // given
+        when(submodelFacade.getSubmodelRawPayload(anyString(), anyString(), anyString())).thenReturn(Files.readString(
+                Paths.get(Objects.requireNonNull(getClass().getResource("/singleLevelUsageAsBuilt.json")).toURI())));
+        when(connectorEndpointsService.fetchConnectorEndpoints(any())).thenReturn(List.of("http://localhost"));
+
+        final ItemContainer.ItemContainerBuilder itemContainerWithShell = ItemContainer.builder()
+                                                                                       .shell(shellDescriptor(
+                                                                                               List.of(submodelDescriptorWithDspEndpoint(
+                                                                                                       singleLevelUsageAsBuiltAspectName,
+                                                                                                       "address"))));
+        final AASTransferProcess aasTransferProcess = new AASTransferProcess();
+
+        // when
+        final ItemContainer result = relationshipDelegate.process(itemContainerWithShell, jobParameterUpward(),
+                aasTransferProcess, createKey());
+
+        // then
+        assertThat(result).isNotNull();
+        assertThat(result.getRelationships()).isNotEmpty();
+        assertThat(aasTransferProcess.getIdsToProcess()).isNotEmpty();
+        assertThat(aasTransferProcess.getIdsToProcess().get(0).getGlobalAssetId()).isNotEmpty();
+        assertThat(aasTransferProcess.getIdsToProcess().get(0).getBpn()).isNotEmpty();
+    }
+
+    @Test
+    void shouldPutTombstoneForMissingBpn() {
+        final ItemContainer.ItemContainerBuilder itemContainerWithShell = ItemContainer.builder()
+                                                                                       .shell(shellDescriptor(
+                                                                                               List.of(submodelDescriptorWithDspEndpoint(
+                                                                                                       singleLevelBomAsBuiltAspectName,
+                                                                                                       "address"))));
+        // when
+        final ItemContainer result = relationshipDelegate.process(itemContainerWithShell, jobParameter(),
+                new AASTransferProcess(), PartChainIdentificationKey.builder().globalAssetId("testId").build());
+
+        // then
+        assertThat(result).isNotNull();
+        assertThat(result.getTombstones()).hasSize(1);
+        assertThat(result.getTombstones().get(0).getCatenaXId()).isEqualTo("testId");
+        assertThat(result.getTombstones().get(0).getProcessingError().getProcessStep()).isEqualTo(
+                ProcessStep.SUBMODEL_REQUEST);
     }
 
     @Test
     void shouldCatchRestClientExceptionAndPutTombstone() throws EdcClientException {
         // given
-        when(submodelFacade.getRelationships(anyString(), any())).thenThrow(
+        when(submodelFacade.getSubmodelRawPayload(anyString(), anyString(), anyString())).thenThrow(
                 new EdcClientException("Unable to call endpoint"));
-        final ItemContainer.ItemContainerBuilder itemContainerWithShell = ItemContainer.builder().shell(shellDescriptor(
-                List.of(submodelDescriptor(assemblyPartRelationshipAspectName, "address"))));
+        when(connectorEndpointsService.fetchConnectorEndpoints(any())).thenReturn(List.of("http://localhost"));
+
+        final ItemContainer.ItemContainerBuilder itemContainerWithShell = ItemContainer.builder()
+                                                                                       .shell(shellDescriptor(
+                                                                                               List.of(submodelDescriptorWithDspEndpoint(
+                                                                                                       singleLevelBomAsBuiltAspectName,
+                                                                                                       "address"))));
 
         // when
         final ItemContainer result = relationshipDelegate.process(itemContainerWithShell, jobParameter(),
-                new AASTransferProcess(), "itemId");
+                new AASTransferProcess(), createKey());
 
         // then
         assertThat(result).isNotNull();
@@ -90,14 +165,18 @@ class RelationshipDelegateTest {
     @Test
     void shouldCatchJsonParseExceptionAndPutTombstone() throws EdcClientException {
         // given
-        when(submodelFacade.getRelationships(anyString(), any())).thenThrow(
+        when(submodelFacade.getSubmodelRawPayload(anyString(), anyString(), anyString())).thenThrow(
                 new EdcClientException(new Exception("Payload did not match expected submodel")));
-        final ItemContainer.ItemContainerBuilder itemContainerWithShell = ItemContainer.builder().shell(shellDescriptor(
-                List.of(submodelDescriptor(assemblyPartRelationshipAspectName, "address"))));
+        when(connectorEndpointsService.fetchConnectorEndpoints(any())).thenReturn(List.of("http://localhost"));
+        final ItemContainer.ItemContainerBuilder itemContainerWithShell = ItemContainer.builder()
+                                                                                       .shell(shellDescriptor(
+                                                                                               List.of(submodelDescriptorWithDspEndpoint(
+                                                                                                       singleLevelBomAsBuiltAspectName,
+                                                                                                       "address"))));
 
         // when
         final ItemContainer result = relationshipDelegate.process(itemContainerWithShell, jobParameter(),
-                new AASTransferProcess(), "itemId");
+                new AASTransferProcess(), createKey());
 
         // then
         assertThat(result).isNotNull();
